Local modifications to PINGMapper

--- a/PINGMapper/pingmapper/conda/PINGMapper.yml
+++ b/PINGMapper/pingmapper/conda/PINGMapper.yml
@@ -2,8 +2,8 @@ name: ping
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
-  - gdal=3.9
+  - python<3.13
+  - gdal
   - numpy
   - git
   - pandas
@@ -25,5 +25,5 @@ dependencies:
       - tensorflow
       - tf-keras
       - opencv-python
-      - transformers<5
+      - transformers
       - rsa
